# oop

./: BaseCatcher.h  BaseData.h  BaseScore.cpp  BaseScore.h  BriefIntroduction.cpp  BriefIntroduction.h  CMakeLists.txt  Date.cpp  Date.h  DateFormat.cpp  DateFormat.h  Director.h  DouBanScore.h  Douban_by_TV.h  Douban_by_TV.py  Douban_by_movies.cpp  Douban_by_movies.py  Douban_by_people.cpp  Douban_by_people.py  Douban_by_toplist.cpp  Douban_by_toplist.h  Episodes.h  FilmMaker.cpp  FilmMaker.h  IMDB_by_TV.h  IMDB_by_TV.py  IMDB_by_TV.txt  IMDB_by_movies.py  IMDB_by_movies.txt  IMDB_by_people.cpp  IMDB_by_people.py  IMDB_by_toplist.cpp  IMDB_by_toplist.h  IMDB_by_toplist.py  IOFormat.cpp  IOFormat.h  Image.h  InfoCS.pro  Language.cpp  Language.h  (+71 more)
Base/: BaseData.h  Date.h  Director.cpp  Episodes.cpp  IMDBScore.cpp  IMDBScore.h  Image.h  Language.cpp  LeadingActor.cpp  LeadingActor.h  Name.h  People.h  Place.cpp  Place.h  Rated.cpp  Rated.h  Runtime.cpp  Type.cpp
BaseData/: BaseData.h  BirthInfo.cpp  BirthInfo.h  Boxing.cpp  Boxing.h  Constellation.cpp  Constellation.h  Date.cpp  Date.h  Director.h  DouBanScore.cpp  DouBanScore.h  Episodes.h  Family.cpp  Family.h  IMDBScore.h  Intro.cpp  Intro.h  Job.cpp  Job.h  Language.cpp  Name.h  OfficialSites.cpp  OfficialSites.h  People.h  Producer.cpp  Producer.h  Rated.h  RottenTomatoesScore.cpp  RottenTomatoesScore.h  Runtime.cpp  Season.cpp  Season.h  Sex.cpp  Sex.h  Similar.cpp  Studio.cpp  Studio.h  Type.h  Writer.cpp  (+3 more)
Catcher/: BaseCatcher.cpp  BaseCatcher.h  Catcher说明.txt  Douban_by_TV.cpp  Douban_by_TV.h  Douban_by_TV.py  (+43 more)
(+77 files in other folders)
